// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`years reducer > handles BOOK_CREATE_SUCCESS > adds a new year entry 1`] = `
{
  "entities": {
    "years": {
      "2010": {
        "count": 1,
        "year": 2010,
      },
      "2012": {
        "count": 1,
        "year": 2012,
      },
      "2013": {
        "count": 1,
        "year": 2013,
      },
      "2014": {
        "count": 1,
        "year": 2014,
      },
      "2015": {
        "count": 1,
        "year": 2015,
      },
      "2016": {
        "count": 7,
        "year": 2016,
      },
    },
  },
  "result": [
    2010,
    2012,
    2013,
    2014,
    2015,
    2016,
  ],
}
`;

exports[`years reducer > handles BOOK_CREATE_SUCCESS > increments the counter for existing years 1`] = `
{
  "entities": {
    "years": {
      "2010": {
        "count": 2,
        "year": 2010,
      },
      "2012": {
        "count": 1,
        "year": 2012,
      },
      "2013": {
        "count": 1,
        "year": 2013,
      },
      "2014": {
        "count": 1,
        "year": 2014,
      },
      "2016": {
        "count": 7,
        "year": 2016,
      },
    },
  },
  "result": [
    2010,
    2012,
    2013,
    2014,
    2016,
  ],
}
`;

exports[`years reducer > handles RECEIVE_YEARS 1`] = `
{
  "entities": {
    "years": {
      "2010": {
        "count": 1,
        "year": 2010,
      },
      "2012": {
        "count": 1,
        "year": 2012,
      },
      "2013": {
        "count": 1,
        "year": 2013,
      },
      "2014": {
        "count": 1,
        "year": 2014,
      },
      "2016": {
        "count": 7,
        "year": 2016,
      },
    },
  },
  "result": [
    2010,
    2012,
    2013,
    2014,
    2016,
  ],
}
`;

exports[`years reducer > returns the initial state 1`] = `
{
  "entities": {
    "years": {},
  },
  "result": [],
}
`;
